--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+
   <section>
     <h2 class="text-center my-5">お酒、飲んでますか？</h2>
     <div class="row">
@@ -15,6 +16,7 @@
 
   <hr class="my-5">
 
+  <!--投稿-->
   <section>
     <div class="row">
       <div class="col-6 px-4 mt-5">
@@ -33,24 +35,26 @@
   
   <hr class="my-5">
 
+  <!--グラフ-->
   <section>
     <div class="row">
-      <div class="col-6 px-4 mt-5">
-        <h4 class="mt-5">飲んだお酒を投稿しよう</h4>
+      <div class="col-6 px-4 mt-3">
+        <h4 class="mt-5">好みを知ろう</h4>
         <hr class="my-1">
-        <p class="lead">楽しすぎて忘れる前に</p>
-        <p class="lead">酔ってしまうと何を飲んだのか</p>
-        <p class="lead">どんな味で何が好きだとその時思いましたか？</p>
-        <p class="lead">日々のお酒を投稿することで忘れずに明日の飲酒生活に！</p>
+        <p class="lead">あなたの好みは？</p>
+        <p class="lead">どこの日本酒が好きなのか</p>
+        <p class="lead">どんな味の日本酒が好きなのか</p>
+        <p class="lead">自分でも知らなかった好みを知って新しい飲酒生活を！</p>
       </div>
-      <div class="col-6 mt-5">
-        <%= image_tag "about-izakaya.jpg", class: "img-fluid rounded" %>
+      <div class="col-6 mt-3">
+        <canvas id="aboutChart"></canvas>
       </div>
     </div>
   </section>
   
   <hr class="my-5">
 
+  <!--まとめ-->
   <div class="pricing-header px-3 py-3 mx-auto text-center">
     <h1 class="display-4 mb-3">さあ始めよう</h1>
     <p class="lead">疲れた日も楽しい日も、お祝いの日もお酒は様々な場面で楽しませてくれます。</p>
@@ -109,3 +113,26 @@
   </div>
 
 </div>
+
+<script>
+var ctx = document.getElementById("aboutChart").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ["神奈川県","東京都","群馬県","千葉県","静岡県"],
+        datasets: [{
+            label: "サンプル",
+            data: [1,2,3,4,5],
+            backgroundColor: 'rgba(255, 99, 132, 1.0)',
+            borderColor: 'rgba(255, 50, 132, 1.0)',
+            fill: false
+        }]
+    },
+    options: {
+        title:  {
+          display: true,
+          text: "県別の評価点数"
+        }
+    }
+});
+</script>
