--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
   <div class="row justify-content-center">
 
-    <div class="col-5 mb-5">
+    <div class="col-6 mb-5">
       <% @posts.each do |post| %>
         <div class="card mb-1">
           <div class="card-header">
@@ -49,6 +49,16 @@
           </div>
         </div>
       <% end %>
+
+      <div class="row mt-3">
+        <div class="mr-auto">
+          <%= page_entries_info @posts %>
+        </div>
+        <div>
+          <%= paginate @posts %>
+        </div>
+      </div>
+
     </div><!--col end-->
 
   </div>
