--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -4,20 +4,65 @@
 
   <div class="row">
 
-    <div class="col-6">
+    <div class="col-12">
       <div class="card">
         <div class="card-body">
-          
+          <canvas id="chart-1"></canvas>
         </div>
       </div>
     </div>
-    <div class="col-6">
-      <div class="card">
-        <div class="card-body">
-          
-        </div>
-      </div>
-    </div>
-
+    <!--<div class="col-6">-->
+    <!--  <div class="card">-->
+    <!--    <div class="card-body">-->
+    <!--      <canvas id="chart-2"></canvas>-->
+    <!--    </div>-->
+    <!--  </div>-->
+    <!--</div>-->
   </div>
 </div>
+
+<script>
+var ctx = document.getElementById("chart-1").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ["山形県", "福島県", "長野県", "埼玉県", "秋田県"],
+        datasets: [{
+            label: "TOP5",
+            data: <%= address_count_values %>,
+            backgroundColor: 'rgba(255, 99, 132, 1.0)',
+            borderColor: 'rgba(255, 50, 132, 1.0)',
+            fill: false
+        }]
+    },
+    options: {
+        title:  {
+          display: true,
+          text: "都道府県別の飲酒回数"
+        }
+    }
+});
+</script>
+
+<script>
+var ctx = document.getElementById("chart-2").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ["北海道","東京都","群馬県","千葉県","静岡県"],
+        datasets: [{
+            label: "サンプル",
+            data: [1,2,3,4,5],
+            backgroundColor: 'rgba(255, 99, 132, 1.0)',
+            borderColor: 'rgba(255, 50, 132, 1.0)',
+            fill: false
+        }]
+    },
+    options: {
+        title:  {
+          display: true,
+          text: "県別の評価点数"
+        }
+    }
+});
+</script>
