--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -4,20 +4,20 @@
 
   <div class="row">
 
-    <div class="col-12">
+    <div class="col-6 mb-5">
       <div class="card">
         <div class="card-body">
           <canvas id="chart-1"></canvas>
         </div>
       </div>
     </div>
-    <!--<div class="col-6">-->
-    <!--  <div class="card">-->
-    <!--    <div class="card-body">-->
-    <!--      <canvas id="chart-2"></canvas>-->
-    <!--    </div>-->
-    <!--  </div>-->
-    <!--</div>-->
+    <div class="col-6">
+      <div class="card">
+        <div class="card-body">
+          <canvas id="chart-2"></canvas>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -26,10 +26,10 @@ var ctx = document.getElementById("chart-1").getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["山形県", "福島県", "長野県", "埼玉県", "秋田県"],
+        labels: <%= raw address_count_keys %>,
         datasets: [{
             label: "TOP5",
-            data: <%= address_count_values %>,
+            data: <%= raw address_count_values %>,
             backgroundColor: 'rgba(255, 99, 132, 1.0)',
             borderColor: 'rgba(255, 50, 132, 1.0)',
             fill: false
@@ -49,10 +49,10 @@ var ctx = document.getElementById("chart-2").getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["北海道","東京都","群馬県","千葉県","静岡県"],
+        labels: <%= raw evaluation_prefecture_keys %>,
         datasets: [{
-            label: "サンプル",
-            data: [1,2,3,4,5],
+            label: "TOP5",
+            data: <%= raw evaluation_prefecture_values %>,
             backgroundColor: 'rgba(255, 99, 132, 1.0)',
             borderColor: 'rgba(255, 50, 132, 1.0)',
             fill: false
@@ -61,7 +61,7 @@ var myChart = new Chart(ctx, {
     options: {
         title:  {
           display: true,
-          text: "県別の評価点数"
+            text: "県別の評価点数"
         }
     }
 });
