--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <!--  <%#= render 'layouts/sidebar/sidebar_users.html.erb'  %>-->
     <!--</div>-->
 
-    <div class="col-7">
+    <div class="col-6">
       <% if @user.errors.any? %>
         <div id="error_explanation" class="alert alert-danger">
           <ul>
@@ -45,10 +45,11 @@
                                            class: "form-control" %>
           </div>
     
-          <%= f.submit "-編集-", class:"btn btn-primary btn-block" %>
+            <%= f.submit "-編集-", class:"btn btn-primary btn-block" %>
         <% end %>
       </div>
-      <div class="row justify-content-center">
+
+      <div class="row justify-content-center mb-5">
         <%= link_to "退会", confirm_user_path(current_user), class: "btn btn-secondary btn-sm mt-4"%>
       </div>
     </div>
